# Web_Assembly

./: Cargo.toml  LICENSE_MIT  Makefile  bench1.txt  bench2.txt  wasm_lib_snip.wasm
benches/: bench.rs
src/: lib.rs  macros.rs  mod1.rs  mover.rs  performance.rs  toggle.rs
tests/: web.rs
